# QA

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirments.txt  run.py
app/: config.py  pipeline.py
app/generation/: qa_engine.py
app/ingestion/: file_loader.py  git_ops.py  indexer.py  parser.py
app/models/: embeddings.py  schemas.py
app/retrieval/: reranker.py  retriever.py  vector_store.py
app/ui/: streamlit_app.py
data/chroma/: chroma.sqlite3
