[project]
name = "qa-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.115.0",
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tree-sitter-python>=0.25.0",
]
